--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -279,7 +279,7 @@ textarea[placeholder] {
 }
 
 .scrolled .header__top-part {
-    background-color: var(--light-green);
+    background-color: var(--light-grey);
     border-bottom: 1px solid var(--blue-color);
     box-shadow: 0px 0px 8px #232323;
     transition: 0.3s ease;
@@ -396,48 +396,73 @@ textarea[placeholder] {
 
 /*============================ footer =========================*/
 .footer {
-    margin-top: var(--m36);
+	background-color: #353535;
+   margin-top: var(--m36);
+}
+
+.footer a {
+	color: var(--light-grey);
+	text-decoration: none;
 }
 
 .footer__wrapper {
-    background-color: #202024;
+	grid-template-rows: 3fr 1fr;
+	grid-template-columns: 1fr 1fr 1fr; 
+	gap: 36px; 
+	grid-template-areas: 
+		"A B C"
+		"D D D"; 
+	align-items: flex-start;
+	justify-items: center;
+	padding-top: var(--m36);
+	padding-bottom: var(--m36);
 }
 
-.footer__top-part {
-    padding-top: 46px;
+.footer__column-1 {
+	grid-area: A;
+ }
+ .footer__column-2 {
+	grid-area: B;
+ }
+ .footer__column-3 {
+	grid-area: C;
+ }
+ .footer__row-bot {
+	grid-area: D;
+ }
+
+ .footer__wrapper-text,
+ .footer__wrapper p {
+	margin-bottom: 0;
+	font-family: var(--font-basic);
+	font-weight: var(--font-weight-300);
+	font-size: var(--font-size-16);
+	line-height: var(--line-height-130);
+	color: var(--light-grey);
 }
 
-.footer__bot-part {
-    padding-top: var(--m12);
-    padding-bottom: 46px;
+/* .footer__politics-link {
+	font-family: var(--font-basic);
+	font-weight: var(--font-weight-300);
+	font-size: var(--font-size-16);
+	line-height: var(--line-height-130);
+	color: var(--blue-color);
+	text-decoration: none;
+} */
+
+.footer__politics-link:hover {
+	color: var(--white-color);
 }
 
-.main-menu__list--footer-text a {
-    color: var(--white-color);
+.footer__icons {
+	gap: 36px;
 }
 
-.footer-bot-part__text {
-    margin-bottom: 0;
-    font-family: var(--font-basic);
-    font-weight: var(--font-weight-300);
-    font-size: var(--font-size-16);
-    line-height: var(--line-height-130);
-    color: var(--white-color);
+.footer__icons svg:hover {
+	transform: scale(1.5);
+	transition: 0.3s ease;
 }
-
-.footer-bot-part__link {
-    font-family: var(--font-basic);
-    font-weight: var(--font-weight-300);
-    font-size: var(--font-size-16);
-    line-height: var(--line-height-130);
-    color: var(--blue-color);
-    text-decoration: none;
-}
-
-.footer-bot-part__link:hover {
-    color: var(--white-color);
-}
-
+/*
 .footer-bot-part__number {
     margin-left: var(--m36);
     font-family: var(--font-basic);
@@ -446,14 +471,9 @@ textarea[placeholder] {
     color: var(--white-color);
 }
 
-.footer__icons svg:hover {
-    transform: scale(1.5);
-    transition: 0.3s ease;
-}
 
-.footer__icons {
-    gap: 36px;
-}
+
+ */
 
 /*======================= Adaptiv =====================*/
 
@@ -568,7 +588,7 @@ textarea[placeholder] {
         width: 100%;
         height: 100%;
         padding: 50px 15px;
-        background: var(--light-green);
+        background: var(--light-grey);
         transform: translateX(-100%);
         transition: transform 0.5s;
     }
