--- a/assets/css/galary.css
+++ b/assets/css/galary.css
@@ -1,12 +1,12 @@
 body {
-	background-color: var(--light-green);
+	background-color: var(--light-grey-color);
 }
 
 main {
 	padding-top: 0px;
 }
 
-.works__main {
+.galary__main {
 	height: 700px;
 	padding-top: 36px;
 	padding-bottom: 100px;
@@ -16,35 +16,8 @@ main {
 	background-size: cover;
 }
  
-.works__main-image {
+/*.galary__main-image {
 	width: 100%;
-}
-.works__main-form {
-	position: relative;
-	max-width: 350px;
-	margin: auto;
-	text-align: center;
-}
-
-.application {
-	border: 2px solid var(--orange-color);
-	padding: 20px;
-	margin: 0 auto;
-}
-
-.application__title {
-	color: var(--orange-color);
-	margin-bottom: 20px;
-}
-.application__subtitle {
-	color: var(--orange-color);
-	margin-bottom: 20px;
-}
-
-.span {
-	display: block;
-	margin-bottom: 36px;
-	text-align: center;
 }
 
 .main-text {
@@ -53,9 +26,9 @@ main {
 
 .main-text a {
 	color: var(--orange-color);
-}
+}*/
 
-.works__examples-slider {
+.galary__examples-slider {
 	max-height: 90vh;
 	position: relative;
 }
@@ -80,7 +53,7 @@ main {
 	width: 20px;
 	margin: 6px;
 	cursor: pointer;
-	background-color: #044971;
+	background-color: var(--light-grey-color);
 	opacity: .9;
 	border-radius: 10px;
 	transition: all .4s ease;
@@ -91,13 +64,12 @@ main {
 	transform: scale(1.3);
 }
 
-	.slider-line {
-		width: 500%;
-		height: 100%;
-		transition: all ease 1s;
-		justify-content: normal;
-	}
-
+.slider-line {
+	width: 500%;
+	height: 100%;
+	transition: all ease 1s;
+	justify-content: normal;
+}
 
 .slide {
 	width: 20%;
@@ -109,7 +81,7 @@ main {
 }
 
 .input--active {
-	background-color: var(--orange-color);
+	background-color: var(--medium-grey-color);
 }
 
 .slider-prev {
@@ -119,8 +91,8 @@ main {
 	width: 50px;
 	height: 50px;
 	padding: 0;
-	border-radius: 50%;
-	background-color: var(--blue-color);
+	border-radius: 10%;
+	background-color: var(--medium-grey-color);
 	opacity: .9;
 	transition: all .4s ease;
 }
@@ -144,7 +116,8 @@ main {
 	width: 50px;
 	height: 50px;
 	padding: 0;
-	border-radius: 50%;
+	border-radius: 10%;
+	background-color: var(--medium-grey-color);
 	opacity: .9;
 	transition: all .4s ease;
 }
@@ -159,83 +132,42 @@ main {
 	opacity: 1;
 	transform: scale(1.1);
 }
-/* ============================Отзывы================================== */
+/* ============================Плитка================================== */
 
-.works__reviews-container {
+.galary__container {
 	padding: 20px 0 100px 0;
 }
 
-.works__reviews-flex {
+.galary__flex {
 	align-items: stretch;
 	display: flex;
 	gap: 40px;
 	flex-wrap: wrap;
 	justify-content: center;
 }
-.works__reviews-item {
-	flex-basis: 27%;
+.galary__item {
+	flex-basis: 22%;
 	padding: 10px;
 	color: var(--white-color);
-	background-color: var(--text-color);
+	background-color: var(--medium-grey-color);
 	border-radius: 10px;
 }
 
-.works__reviews-item:hover {
+.galary__item:hover {
 	position: relative;
 	transform: scale(1.1);
 	transition: 0.3s ease all;
 	background: var(--text-color);
 	z-index: 2;
 }
-.reviews-item {
-	min-height: 500px;
+.photo-item {
+	min-height: 300px;
 	padding-bottom: 20px;
 	display: flex;
 	flex-direction: column;
-	gap: 40px;
+	gap: 20px;
 	align-items: center;
 	justify-content: flex-start;
-}
-
-.works__reviews-header {
-	width: 100%;
-	padding-bottom: 20px;
-	gap: 10px;
-	justify-content: flex-start;
-	border-bottom: 1px solid rgb(62, 63, 63);
-}
-
-.reviews__item-title h3{
-	font-size: var(--font-size-16);
-	margin-bottom: 20px;
-	color: var(--white-color);
-}
-
-.reviews__item-text {
-	position: relative;
-	background-color: rgba(62, 63, 63, 1);
-	text-align: left;
-	padding: 5px;
-	border-radius: 15px 15px 15px 0;
-}
-
-.reviews__item-text:after {
-	content: '';
- 	border-top: 15px solid rgba(62, 63, 63, 1);
-	border-left: 0 solid transparent;
-	border-right: 20px solid transparent;
-	position: absolute;
-	bottom: -15px;
-	margin-left: -5px;
-}
-
-.reviews__img {
-	position: relative;
-	width: 40px;
-	height: 40px;
-	border-radius: 50%;
-	background-color: var(--white-color);
-	border: 2px solid #000;
 }
 
 /* Adaptive */
@@ -250,10 +182,10 @@ main {
 }
 
 @media screen and (max-width: 1024px) {
-	.works__reviews-flex {
+	.galary__reviews-flex {
 		padding: 20px;
 	}
-	.works__reviews-item {
+	.galary__reviews-item {
 		flex-basis: 30%;
 	}
 }
@@ -263,11 +195,11 @@ main {
 		max-width: 90%;
 	}
 
-	.works__reviews-item {
+	.galary__reviews-item {
 		flex-basis: 35%;
 	}
 	
-	.works__reviews-item:hover {
+	.galary__reviews-item:hover {
 		position: relative;
 		transform: none;
 		transition: none;
@@ -285,21 +217,21 @@ main {
 }
 
 @media screen and (max-width: 630px) {
-	.works__reviews-item {
+	.galary__reviews-item {
 		flex-basis: 55%;
 	}
 }
 
 @media screen and (max-width: 480px) {
-	.works__reviews-container {
+	.galary__reviews-container {
 		padding: 0;
 	}
 	
-	.works__reviews-item {
+	.galary__reviews-item {
 		flex-basis: 70%;
 	}
 
-	.works__title {
+	.galary__title {
 		font-size: 32px;
 	}
 }
