--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -53,7 +53,7 @@ main {
 }
 
 .main-banner--text {
-    color: var(--white-color);
+    color: var(--medium-grey-color);
     font-family: var(--font-heading);
 }
 
@@ -75,9 +75,10 @@ main {
 
 .main-banner__slogan {
     float: right;
-    padding-top: 132px;
+    padding-top: 222px;
     font-size: 54px;
     font-weight: var(--font-weight-600);
+	 color: var(--light-green-color);
     letter-spacing: 0.03em;
     line-height: 130%;
     margin: 0;
