--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,7 +1,7 @@
 :root {
 	--text-color: #0f0f0f;
 	--blue-color: #1c6996;
-	--orange-color: #ff7313;
+	--orange-color: #356A35;
 	--light-green-color: #9fe8ad;
 	--light-grey-color: #cccccc;
 	--medium-grey-color: #353535;
