--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -121,165 +121,6 @@ main {
     cursor: default;
 }
 
-/* slider */
-
-.materials__title {
-    margin-top: 0;
-}
-
-.materials {
-	margin-bottom: 30px;
-}
-
-.materials__slider {
-	position: relative;
-}
-
-.slider {
-	max-width: 1140px;
-	position: relative;
-	margin: 0 auto;
-    margin-top: 48px;
-	border-radius: 10px;
-	overflow: hidden;
-}
-@media (min-width: 576px) and (max-width: 1199px) {
-	.slider {
-		max-width: 100%;
-	}}
-
-@media (max-width: 576px) {
-	.slider {
-		max-width: 90%;
-	}}
-
-	.navigation-manual {
-		position: absolute;
-		top: 0;
-		left: 50%;
-		transform: translateX(-50%);
-	}
-
-	.manual-btn {
-		height: 20px;
-		width: 20px;
-		margin: 6px;
-		cursor: pointer;
-		background-color: var(--blue-color);
-		opacity: .9;
-		border-radius: 10px;
-		transition: all .4s ease;
-	}
-
-	.manual-btn:hover {
-		opacity: 1;
-		transform: scale(1.3);
-	}
-
-	input[name="slider__radio"] {
-		position: absolute;
-		visibility: hidden;
-	}
-
-	.slider-line {
-		width: 500%;
-		height: 100%;
-		transition: all ease 1s;
-		justify-content: normal;
-	}
-
-
-.slide {
-	width: 20%;
-	transition: all 1s ease;
-}
-
-.slide img{
-width: 100%;
-transition: all 1s ease;
-}
-
-.input--active {
-	background-color: #FF7313;
-}
-
-
-#radio_1:checked ~ .first {
-	margin-left: 0;
-}
-#radio_2:checked ~ .first {
-	margin-left: -20%; 
-}
-#radio_3:checked ~ .first {
-	margin-left: -40%; 
-}
-#radio_4:checked ~ .first {
-	margin-left: -60%; 
-}
-#radio_5:checked ~ .first {
-	margin-left: -80%; 
-}
-
-.slider-button {
-	padding: 15px 76px 16px 76px;
-	background: #044971;
-	font-family: 'Roboto';
-	font-style: normal;
-	font-weight: 500;
-	font-size: 16px;
-	line-height: 130%; 
-	color: #fff;
-	border: none;
-	cursor: pointer;
-}
-
-.slider-prev {
-	position: absolute;
-	top: 45%;
-	left: 15px;
-	width: 50px;
-	height: 50px;
-	padding: 0;
-	border-radius: 50%;
-	background-color: #044971;
-	opacity: .9;
-	transition: all .4s ease;
-}
-
-.slider-prev img{
-	position: relative;
-	top: 3px;
-	left: -2px;
-	transform: rotate(180deg);
-}
-
-.slider-prev:hover {
-	opacity: 1;
-	transform: scale(1.1);
-}
-
-.slider-next {
-	position: absolute;
-	top: 45%;
-	right: 10px;
-	width: 50px;
-	height: 50px;
-	padding: 0;
-	border-radius: 50%;
-	opacity: .9;
-	transition: all .4s ease;
-}
-
-.slider-next img{
-	position: relative;
-	top: 3px;
-	left: 2px;
-}
-
-.slider-next:hover {
-	opacity: 1;
-	transform: scale(1.1);
-}
 
 /* Media */
 
@@ -343,17 +184,6 @@ transition: all 1s ease;
         right: 24px;
         padding: 10px 20px;
     }
-
-    .slider-prev img{
-        top: 1px;
-        left: 30%;
-    }
-
-    .slider-next img{
-        top: 1px;
-        left: 40%;
-    }
-
 }
 
 @media screen and (max-width: 515px){
@@ -388,11 +218,7 @@ transition: all 1s ease;
     }
 	}
 @media screen and (max-width: 480px) {
-    .main-banner__wrapper, .brend, .schemework, .calculator {
+    .main-banner__wrapper, .brend {
         margin-bottom: var(--m60);
-    }
-
-    .materials__title {
-        font-size: 18px;
     }
 	}
