--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -3,7 +3,7 @@
 	--blue-color: #1c6996;
 	--orange-color: #356A35;
 	--light-green-color: #9fe8ad;
-	--light-grey-color: #cccccc;
+	--light-grey-color: #f1f6fa;
 	--medium-grey-color: #353535;
 	--white-color: #ffffff;
 
