--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,8 +1,8 @@
 :root {
 	--text-color: #0f0f0f;
-	--blue-color: #1c6996;
-	--orange-color: #356A35;
-	--light-green-color: #9fe8ad;
+	--light-green-color: #47ad44;
+	--green-color: #356A35;
+	--orange-color: #ff7e05;
 	--light-grey-color: #f1f6fa;
 	--medium-grey-color: #353535;
 	--white-color: #ffffff;
