--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,10 +6,6 @@ main {
     padding-top: 0px;
 }
 
-.container {
-    overflow: hidden;
-}
-
 .footer__wrapper .container {
     overflow: visible;
 }
@@ -100,12 +96,12 @@ main {
 	align-items: center;
 	justify-items: center;
 	text-align: center;
-	padding: var(--m36) 0;
+	padding: var(--m36) var(--m12);
 }
 
 .item-11 {
 	grid-area: A;
-	background-image: url(../images/main-banner.jpg);
+	background-image: url(../images/main-category/1.png);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
@@ -113,7 +109,7 @@ main {
 
 .item-12 {
 	grid-area: D;
-	background-image: url(../images/main-banner.jpg);
+	background-image: url(../images/main-category/2.png);
    background-repeat: no-repeat;
    background-position: center;
 	background-size: cover;
@@ -125,7 +121,7 @@ main {
 
 .item-31 {
 	grid-area: C;
-	background-image: url(../images/main-banner.jpg);
+	background-image: url(../images/main-category/3.png);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
@@ -133,7 +129,7 @@ main {
 
 .item-32 {
 	grid-area: E;
-	background-image: url(../images/main-banner.jpg);
+	background-image: url(../images/main-category/4.png);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
@@ -148,13 +144,30 @@ main {
 	width: 100%;
 	position: relative;
 	transition: 0.3s ease;
+	text-align: center;
 	border-radius: 10px;
+	border: 1px #000 solid;
+	box-shadow: 10px 10px 44px -10px rgba(0,0,0,0.65);
 }
 
 .banner-grid__item:hover {
 	color: var(--blue-color);
 	transform: scale(1.05);
 	cursor: default;
+}
+
+.banner-grid__item a {
+	width: 120px;
+	position: absolute;
+	bottom: 10px;
+	right: 10px;
+	padding: 15px 15px 15px 15px;
+	color: var(--light-grey-color);
+	text-decoration: none;
+	transition: 0.3s ease;
+	border-radius: 10px;
+	border: 1px #000 solid;
+	box-shadow: 10px 10px 44px -10px rgba(0,0,0,0.65);
 }
 
 /*  slider  */
@@ -170,7 +183,7 @@ main {
 	width: 100%;
 	height: 420px;
 	border-radius: 10px;
-	box-shadow: 10px 10px 44px -10px rgba(0,0,0,0.65);
+	box-shadow: 5px 5px 14px -5px rgba(0,0,0,0.65);
 }
 
 .slider__wrapper img{
@@ -201,8 +214,9 @@ img {
 .dot {
 	width: 15px;
 	height: 15px;
+	border: 2px #000 solid;
 	border-radius: 50%;
-	background-color: #f2f3f5; 
+	background-color: rgba(224, 220, 220, 0);
 	margin-right: 10px;  
 	cursor: pointer;
 }
@@ -212,17 +226,19 @@ img {
 }
 
 .dot--active {
-	background-color: var(--orange-color);
+	background-color: var(--green-color);
 }
 
 /*  brend  */
 
 .brend {
    margin-bottom: var(--m108);
+	background-color: var(--medium-grey-color);
 }
 
 .brend__title {
-   margin-top: 0;
+   padding-top: var(--m48);
+	color: var(--light-grey-color);
 }
 
 .brend-grid {
@@ -251,7 +267,6 @@ img {
     transform: scale(1.05);
     cursor: default;
 }
-
 
 /* Media */
 
@@ -298,6 +313,12 @@ img {
 
 	.slider__wrapper {
 		height: 520px;
+	}
+}
+
+@media screen and (max-width: 890px) {
+	.banner-grid {
+		padding: 0 30px;
 	}
 }
 
@@ -377,7 +398,7 @@ img {
 
 	.banner-grid {
 	 grid-template-columns: 1fr;
-	 grid-template-rows: 2fr 1fr 1fr 1fr 1fr;
+	 grid-template-rows: 2fr 2fr 2fr 2fr 2fr;
 	 grid-template-areas: 
 		"B"
 		"A"
