--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -591,7 +591,7 @@ textarea[placeholder] {
 		width: 100%;
 		height: 100%;
 		padding: 50px 15px;
-		background-image: url(../images/m-menu1.jpg);
+		background-image: url(../images/m-menu.jpg);
    	background-repeat: no-repeat;
    	background-position: center;
    	background-size: cover;
