--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -3,7 +3,7 @@ body {
 }
 
 /* banner */
-.banner {
+/* .banner {
     padding-top: 36px;
     margin-bottom: 54px;
 }
@@ -138,7 +138,169 @@ img {
 
 .dot--active {
     background-color: var(--orange-color);
+} */
+
+
+
+/* about */
+
+.wrapper {
+  height: 600px;
+  width: 100%;
+  background: #f1f6fa;
+  position: relative;
+
 }
+
+.about__bubble {
+  height: 60px;
+  width: 60px;
+  border: 2px solid #353535;
+  border-radius: 50px;
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  animation: 4s linear infinite;
+}
+.dot {
+  height: 10px;
+  width: 10px;
+  border-radius: 50px;
+  background: #353535;
+  position: absolute;
+  top: 20%;
+  right: 20%;
+}
+.wrapper div:nth-child(2) {
+  top: 20%;
+  left: 20%;
+  animation: animate 8s linear infinite;
+}
+.wrapper div:nth-child(3) {
+  top: 60%;
+  left: 80%;
+  animation: animate 10s linear infinite;
+}
+.wrapper div:nth-child(4) {
+  top: 40%;
+  left: 40%;
+  animation: animate 3s linear infinite;
+}
+.wrapper div:nth-child(5) {
+  top: 66%;
+  left: 30%;
+  animation: animate 7s linear infinite;
+}
+.wrapper div:nth-child(6) {
+  top: 90%;
+  left: 10%;
+  animation: animate 9s linear infinite;
+}
+.wrapper div:nth-child(7) {
+  top: 30%;
+  left: 60%;
+  animation: animate 5s linear infinite;
+}
+.wrapper div:nth-child(8) {
+  top: 70%;
+  left: 20%;
+  animation: animate 8s linear infinite;
+}
+.wrapper div:nth-child(9) {
+  top: 75%;
+  left: 60%;
+  animation: animate 10s linear infinite;
+}
+.wrapper div:nth-child(10) {
+  top: 50%;
+  left: 50%;
+  animation: animate 6s linear infinite;
+}
+.wrapper div:nth-child(11) {
+  top: 45%;
+  left: 20%;
+  animation: animate 10s linear infinite;
+}
+.wrapper div:nth-child(12) {
+  top: 10%;
+  left: 80%;
+  animation: animate 9s linear infinite;
+}
+.wrapper div:nth-child(13) {
+  top: 20%;
+  left: 60%;
+  animation: animate 7s linear infinite;
+}
+.wrapper div:nth-child(14) {
+  top: 20%;
+  left: -5%;
+  animation: animate 8s linear infinite;
+}
+.wrapper div:nth-child(15) {
+  top: 60%;
+  left: -15%;
+  animation: animate 6s linear infinite;
+}
+.wrapper div:nth-child(16) {
+  top: 90%;
+  left: -20px;
+  animation: animate 9s linear infinite;
+}
+@keyframes animate {
+  0% {
+    transform: scale(0) translateY(0) rotate(70deg);
+  }
+  100% {
+    transform: scale(1.3) translateY(-100px) rotate(360deg);
+  }
+}
+
+.about__content {
+    bottom: 40%;
+    left: -400px;
+    height: 300px;
+    width: 340px;
+    position: absolute;
+    border-radius: 0 20px 20px 0;
+    background-color: var(--medium-grey-color);
+    transition: all 2s ease;
+    animation: animate_pulse 1.5s infinite;
+}
+  
+  .about__content:hover {
+      width: 920px;
+      transition: all 1s ease;
+      animation: none;
+}
+
+  @keyframes animate_pulse {
+	0% {
+		box-shadow: 0 0 0 0 rgba(4, 73, 113, 0.4);
+	}
+	70% {
+		box-shadow: 0 0 0 35px rgba(228, 25, 49, 0);
+	}
+	100% {
+		box-shadow: 0 0 0 0 rgba(228, 25, 49, 0);
+	}
+    
+}
+
+.content__wrapper {
+    position: relative;
+    height: 100%;
+}
+
+.content__title {
+    position: absolute;
+    width: fit-content;
+    top: 50%; 
+    left: 50%;
+    margin: 0;
+    color: var(--white-color);
+    transform: rotate(-90deg);
+}
+
 
 /* properties */
 .properties {
