--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -238,7 +238,7 @@ img {
 }
 .wrapper .about__bubble:nth-child(14) {
   top: 60%;
-  left: -15%;
+  left: 100%;
   animation: animate 6s linear infinite;
 }
 .wrapper .about__bubble:nth-child(15) {
@@ -258,13 +258,27 @@ img {
 .about__content {
     bottom: 0;
     left: -400px;
-    height: 500px;
-    width: 340px;
+    height: 520px;
+    width: 240px;
     position: absolute;
     border-radius: 0 20px 20px 0;
     background-color: var(--medium-grey-color);
     transition: all 2s ease;
     animation: animate_pulse 1.5s infinite;
+    z-index: 1;
+}
+
+  @keyframes animate_pulse {
+	0% {
+		box-shadow: 0 0 0 0 rgba(4, 73, 113, 0.4);
+	}
+	70% {
+		box-shadow: 0 0 0 35px rgba(228, 25, 49, 0);
+	}
+	100% {
+		box-shadow: 0 0 0 0 rgba(228, 25, 49, 0);
+	}
+    
 }
   
 .about__content:hover {
@@ -279,17 +293,9 @@ img {
     animation: fadeInFromNone 1s ease-in-out;
 }
 
-  @keyframes animate_pulse {
-	0% {
-		box-shadow: 0 0 0 0 rgba(4, 73, 113, 0.4);
-	}
-	70% {
-		box-shadow: 0 0 0 35px rgba(228, 25, 49, 0);
-	}
-	100% {
-		box-shadow: 0 0 0 0 rgba(228, 25, 49, 0);
-	}
-    
+.about__content:hover .content__title {
+    left: 20%;
+    transition: all 1s ease;
 }
 
 .content__wrapper {
@@ -305,19 +311,28 @@ img {
     margin: 0;
     color: var(--white-color);
     transform: rotate(-90deg);
+    transition: all 1s ease;
 }
 
 .content__grid {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
+    gap: 40px;
     position: absolute;
-    right: 0;
+    right: 60px;
     display: none;
     opacity: 0;
 }
 
 .content__item {
-    width: 100px;
+    width: 130px;
+}
+
+.content__text {
+    text-align: center;
+    margin: 0;
+    color: var(--white-color);
+    font-size: var(--font-size-18);
 }
 
 /* properties */
