--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -146,10 +146,9 @@ img {
 
 .wrapper {
   height: 600px;
-  width: 100%;
+  width: 100vw;
   background: #f1f6fa;
   position: relative;
-
 }
 
 .about__bubble {
@@ -233,7 +232,7 @@ img {
 }
 .wrapper .about__bubble:nth-child(13) {
   top: 20%;
-  left: -5%;
+  left: 15%;
   animation: animate 8s linear infinite;
 }
 .wrapper .about__bubble:nth-child(14) {
@@ -243,7 +242,7 @@ img {
 }
 .wrapper .about__bubble:nth-child(15) {
   top: 90%;
-  left: -20px;
+  left: 10px;
   animation: animate 9s linear infinite;
 }
 @keyframes animate {
@@ -257,7 +256,7 @@ img {
 
 .about__content {
     bottom: 0;
-    left: -400px;
+    left: -100px;
     height: 520px;
     width: 240px;
     position: absolute;
