--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -3,9 +3,11 @@ body {
 }
 
 /* about */
-
+.about {
+    overflow-x: hidden;
+}
 .wrapper {
-  height: 600px;
+  height: 700px;
   width: 100vw;
   background: #f1f6fa;
   position: relative;
@@ -81,7 +83,7 @@ body {
   animation: animate 10s linear infinite;
 }
 .wrapper .about__bubble:nth-child(11) {
-  top: 10%;
+  top: 30%;
   left: 80%;
   animation: animate 9s linear infinite;
 }
